plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2023.0.0")
}

dependencies {
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.2.4'

//
//	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.2.4'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.projectlombok:lombok:1.18.28'
	implementation 'org.jetbrains:annotations:24.0.0'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
	implementation 'org.slf4j:slf4j-api:2.0.11'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.2'
	implementation group: 'org.hibernate.validator', name: 'hibernate-validator', version: '8.0.1.Final'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.2.2'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'org.springframework.security:spring-security-crypto:6.2.1'
	compileOnly group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '6.1.0-M2'
	implementation("org.mapstruct:mapstruct:1.4.2.Final")
	annotationProcessor("org.mapstruct:mapstruct-processor:1.4.2.Final")
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.1'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.17.1'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.17.1'
	implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation group: 'org.webjars.npm', name: 'chart.js', version: '4.4.3'
	implementation group: 'org.webjars.npm', name: 'react', version: '19.0.0-canary-fd0da3eef-20240404'
	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.1.0'
	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-loadbalancer', version: '4.1.1'
	implementation group: 'io.github.openfeign', name: 'feign-jackson', version: '13.2.1'
	implementation 'io.github.openfeign:feign-gson:11.2'
	testImplementation group: 'com.github.tomakehurst', name: 'wiremock-standalone', version: '3.0.1'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'





}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
